look/generic.css
/*

New design for fsfe.org.

Colours to use:
  TODO

Editing rules:
  - Colours should be given in RGB.
  - Properties should be split with a colon and a space.
  - Selectors should be on separate lines, where the last item will
    carry the block opener.
  - Indentation should be two spaces, and no tabs should be used.
  - Any images or other resources' URLs must be given in absolute
    paths.
  - Font sizes (apart from the first font size definition in body) and
    line heights must be set in percent.
  - Generally strive not to repeat yourself (DRY).

*/

@import url("grid.css");
@import url("input.css");

/* Custom fonts */
@font-face {
  font-family: Lucida Sans;
  src: url("/fonts/LSANS.TTF");
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Arial", sans-serif;
  font-size: 12px;
  line-height: 180%;
  color: rgb(50,50,50);
  background-color: rgb(240,240,240);
  background-image: url("/graphics/ribbon-gray.png");
  background-repeat: no-repeat;
  background-position: 19px 70px;
}

a:link,
a:visited {
  text-decoration: none;
}

a:link {
  color: rgb(51,148,206);
}

a:hover {
  text-decoration: underline;
}

a:visited {
  color: rgb(153,186,206);
}

a img {
  border: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
#content p#category {
  font-family: "Helvetica", "Arial", sans-serif;
}

h1,
h2,
h3 {
  font-weight: normal;
  line-height: normal;
}

h2 {
  color: #202D79;
  font-size: 200%;
  letter-spacing: -.5px;
  line-height: 120%;
  margin: .4em -.3em .5em;
  padding: 0 .3em .2em;
}

h3 {
  color: rgb(32,45,121);
  line-height: 110%;
  margin: 1.5em 0 .8em 0;
  font-size: 190%;
}

p {
  margin: .8em 0;
  font-size:1.2em;
}

pre {
  font-family: monospace;
  font-size: 90%;
  line-height: 140%;
  background-color: rgb(240,240,240);
  border-top: 1px dotted rgb(210,210,210);
  border-bottom: 1px dotted rgb(210,210,210);
  padding: 1.2em 0 1.2em 187px;
  max-height: 14em;
  overflow: auto;
  margin: 1em 0;
  box-shadow: 10px 0 0 rgb(240,240,240);
}

ul,
ol {
  padding-left: 1.5em;
}

ul {
  list-style: circle;
}


/* generic classes */
.clear {
    clear:both;
}

#wrapper {
  margin:0 5% 0 1%;
  padding-bottom: 0;
  max-width: 980px;
  min-width: 500px;
  border-left: 1px solid rgb(240,240,240);
}

#wrapper-inner {
  float: left;
  background-color: white;
  padding-bottom: 3em;
  -moz-border-radius-bottomright: 25px;
  -moz-border-radius-bottomleft: 3px;
  border-bottom-right-radius: 25px;
  border-bottom-left-radius: 3px;
  box-shadow: 3px 3px 4px rgba(0,0,0,.1);
  -webkit-box-shadow: 3px 3px 4px rgba(0,0,0,.1);
  -moz-box-shadow: 3px 3px 4px rgba(0,0,0,.1);
  overflow: hidden;
  width: 100%;
}

.n {
  display: none;
}

.read_more {
  text-align: right;
}

.break {
  clear: both;
}


/* header */
#header {
  background: url("/graphics/ribbon.png") no-repeat scroll left bottom transparent;
  min-height: 220px;
  margin: 0;
  width: 100%
}

#logo {
  float:left;
  margin:1em 0 0 1%;
  max-width:29%;
  width:215px;
}

#logo a img {
  max-width: 100%;
}

#statement {
  color: rgb(140,140,140);
  float:left;
  font-size:120%;
  margin:3em 2% 0 8%;
  width:60%;
}

#statement a {
  padding-left: 1em;
}


/* sidebar */
#menu,
#search,
#translations {
  margin-bottom: 1em;
  clear: left;
  float: left;
}

#search,
#translations {
  padding-left: .8em;
}

#search input[type="image"] {
  background-color: transparent;
  border: 0;
  margin: 10px 0 0 -35px;
  vertical-align: middle;
}

#search input[type="text"] {
  padding-left: 30px;
  width: 150px;
}

#search p {
  margin: 0;
}

#translations ul {
  font-size: 90%;
}

#translations ul li {
  list-style: none;
  line-height: 120%;
}


/* ------------------------------------------------------------------------- */
/* Content                                                                   */
/* ------------------------------------------------------------------------- */

/* content specific */
#content {
  clear: right;
  float: left;
  min-height: 400px;
  width: 78%;
}

#content p#category {
  font-size: 170%;
  font-weight: bold;
  line-height: 120%;
  margin: 0 0 0.3em;
}

#content h1,
#content h2,
#content h3 {
  color: #202D79;
  line-height: normal;
}


#content h1 {
  border-bottom: 1px solid #D2D2D2;
  font-size: 250%;
  margin: 0;
  padding: 0 0 0.5em;
}

#content h2 {
  margin-top: 1.5em;
}

#content h3 {
  font-size: 140%;
  margin: 1.5em 0 .2em 0;
}

#content .image {
  background-color: #FDFDFD;
  float: left;
  padding: 0 2em 2em 0;
}

#content .image.right {
  float: right;
  padding: 0 0 2em 2em;
}

#content .image p {
  border-bottom: 1px solid rgb(210,210,210);
  border-left: 1px solid rgb(210,210,210);
  border-right: 1px solid rgb(210,210,210);
  font-size: 90%;
  margin-top: 0;
  padding: .5em;
}

#content .image .photographer {
  font-size: 90%;
  font-style: italic;
}

.imgright {  /* compatibility */
  float: right;
  margin: 0 0 1em 1em;
}

.postit {  /* compatibility */
  float: left;
  margin: 0 1em 1em 0;
  border: 1px #000 solid;
  padding: 0.3em;
  width: 14em;
  background: #FFECBF;
  text-align: center;
}
  
#content img {
  float: left;
  margin: 0 1em 1em 0;
}

.fineprint {  /* compatibility */
  color: rgb(120,120,120);
  font-size: 90%;
  border-top: 1px solid	rgb(220,220,220);
  padding: 1em .5em;
  margin: 3em -.5em 1em;
}

.toolbox {  /* compatibility */
  background-color: rgb(244,248,250);
  float: right;
  font-size: 85%;
  margin: .5em 0 0 1em;
  padding: 1em;
  width: 12em;
}

p.terminal,
pre.terminal,
p.file,
pre.file {
  font-family: monospace;
  padding: .5em 1em;
}

p.terminal,
pre.terminal {
  background-color: rgb(50,50,50);
  border-left: 10px solid rgb(97,97,97);
  color: white;
}

p.file,
pre.file {
  background-color: rgb(244,248,250);
  border-left: 10px solid rgb(141,172,190);
  color: rgb(50,50,50);
}

#introduction {
  border-bottom: 1px solid rgb(210,210,210);
  float: left;
  font-size: 125%;
  margin: 0 -.5em 2em -.5em;
  min-height: 60px;
  padding: 1em .5em;
  width: 100%;
}
/* ... */

